testsuite/poke.pkl/raise-diag-1.pkl
/* { dg-do compile } */

defun foo = ()
  {
   raise "foo"; /* { dg-error "" } */
  }
